--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
 <table>
 <tr>
 <ul>
-<img src=ren.jpeg width="100" height="100">
+<img src=Ren.jpeg width="100" height="100">
 <li>Renata Von Katona</li>	
 <li><a href="mailto://renatavk@yahoo.com.ar"> renatavk@yahoo.com.ar </a></li>
 <hr>
-<img src=dana.jpeg width="100" height="100">
+<img src=Dana.jpeg width="100" height="100">
 <li>Dana Monsalva 
 <li><a href="mailto://dana.monsalva8@gmail.com"> dana.monsalva8@gmail.com </a></li>
 	 
 <hr>
-<img src=luli.jpg width="100" height="150">
+<img src=Luli.jpeg width="100" height="150">
 <li>Luciana Rubio  
 <li> <a href="mailto://lcrubio07@gmail.com"> lcrubio07@gmail.com </a></li>
  
 
 <hr>
-<img src=augusto.jpeg width="100" height="100">
+<img src=Augusto.jpeg width="100" height="100">
 <li>Augusto Ramet       
 <li> <a href="mailto://augustoramet@gmail.com "> augustoramet@gmail.com  </a></li>
 <a href="https://github.com/augustoramet/Modulo1"> GitHub Augusto </a>
 <hr>
-<img src=facu.jpeg width="100" height="120">
+<img src=Facu.jpeg width="100" height="120">
 <li> Facundo Cardozo	
 <li> <a href="mailto://cardozofacundo1903@gmail.com">cardozofacundo1903@gmail.com  </a></li>  
 <hr>
-<img src=tito.jpg width="100" height="100">
+<img src=Tito.jpeg width="100" height="100">
 <li>Lautaro Garcia	
 <li> <a href="mailto://lautarogarciaing00@hotmail.com">lautarogarciaing00@hotmail.com  </a></li> 
 <hr>
