--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <hr>
 </ul>
 	
-Modulo 1:<A HREF="https://github.com/Facucard12/Modulo1"> Modulo1 </A>
+<A HREF="https://github.com/Facucard12/Modulo1"> Modulo1 </A>
 
 
 </body>
