--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <li> <a href="mailto://lautarogarciaing00@hotmail.com">lautarogarciaing00@hotmail.com  </a></li> 
 <hr>
 </ul>
-<A HREF="https://github.com/Facucard12/Modulo1"> Modulo1 </A>
+<A href="https://github.com/Facucard12/Modulo1"> Modulo1 </A>
 <hr>	
-<A HREF="https://github.com/Monsalva10/Modulo2"> Modulo2 </A>
+<A href="https://github.com/Monsalva10/Modulo2"> Modulo2 </A>
 
 
 </body>
