--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 	<h2> Integrantes del grupo <h2>
 <table>
 <tr>
-<span style="border-image: initial; border: 1px solid blue;">
-	<ul>
-	<img src=Ren.jpeg width="100" height="100">
-	<li>Renata Von Katona</li>	
-	<li><a href="mailto://renatavk@yahoo.com.ar"> renatavk@yahoo.com.ar </a></li>
-</span>
+	<div class="encuadre">
+  <h2>Título del Encuadre</h2>
+  <p><ul>
+<img src=Ren.jpeg width="100" height="100">
+<li>Renata Von Katona</li>	
+<li><a href="mailto://renatavk@yahoo.com.ar"> renatavk@yahoo.com.ar </a></li></p>
+</div>
+
 <hr>
 <img src=Dana.jpeg width="100" height="100">
 <li>Dana Monsalva 
