--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <htlm>
 <head> 
  <h1> GRUPO MESSI <h1>
+	 <h2> Persevera y triunfaras </h2>
 	 <img src=messi.jpeg width="100" height="100">
 </head>
  <hr>
